fix: remove OpenSSL installation and checksum ignore for Prisma in Dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,6 @@
 # ------------------------ Build Stage ------------------------
 FROM node:20-slim AS build
 
-# Install OpenSSL for Prisma
-RUN apt-get update -y && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
-
 # user changed to a non-root user inside the container
 RUN addgroup --system app && adduser --system --ingroup app app
 RUN npm install -g pnpm
@@ -16,17 +13,15 @@ COPY package*.json pnpm-lock.yaml ./
 RUN pnpm install --frozen-lockfile --ignore-scripts --shamefully-hoist 
 
 COPY . .
-
-# Ignore checksum errors during generate
-ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
+ENV NODE_TLS_REJECT_UNAUTHORIZED=0
+RUN npm config set strict-ssl false
 RUN npx prisma generate
 RUN npm run build
 
 # ---------------------- Runtime Stage ----------------------
 FROM node:20-slim AS runtime
 
-# Install OpenSSL for Prisma (and curl as before)
-RUN apt-get update && apt-get install -y curl openssl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 RUN addgroup --system app && adduser --system --ingroup app app
 RUN npm install -g pnpm
 
@@ -45,10 +40,9 @@ COPY --from=build /app/public ./public
 COPY --from=build /app/views ./views
 # docker-compose.yml is not included in the image, instead, it is copied directly to the server inside the ci/cd pipeline as a best practice
 
-# Ignore checksum errors during generate
-ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
+ENV NODE_TLS_REJECT_UNAUTHORIZED=0
+RUN npm config set strict-ssl false
 RUN npx prisma generate
-
 EXPOSE 5000
 
 CMD ["npm", "start"]
