--- a/.github/workflows/client.prod.yml
+++ b/.github/workflows/client.prod.yml
@@ -56,7 +56,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "server/nginx.conf"
-          target: "~/todo/nginx.conf"
+          target: "~/todo"
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.3
