--- a/.github/workflows/client.prod.yml
+++ b/.github/workflows/client.prod.yml
@@ -66,4 +66,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/todo
-            docker-compose restart nginx
+            docker compose restart nginx
