fix: update nginx configuration

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -45,19 +45,11 @@ http {
 
         # Serve static frontend files
         location / {
-            root /home/deployment/frontend;  # Adjust username as needed
+            root /home/deployment/frontend;
             index index.html;
             try_files $uri $uri/ /index.html;
 
             # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-                add_header X-Frame-Options "SAMEORIGIN" always;
-                add_header X-XSS-Protection "1; mode=block" always;
-                add_header X-Content-Type-Options "nosniff" always;
-                add_header Referrer-Policy "no-referrer-when-downgrade" always;
-            }
 
             # Security headers for HTML pages
             add_header X-Frame-Options "SAMEORIGIN" always;
@@ -66,6 +58,17 @@ http {
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
             add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         }
+
+        # Serve static assets with caching and security headers
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                root /home/deployment/frontend;
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-XSS-Protection "1; mode=block" always;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header Referrer-Policy "no-referrer-when-downgrade" always;
+            }
     }
 
     server {
