--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -36,20 +36,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
-
-            # Additional proxy settings for API
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
 
-        # Serve static frontend files
+        # Serve static frontend files (SPA)
         location / {
             root /home/deployment/frontend;
             index index.html;
-            try_files $uri $uri/ /index.html;
-
-            # Cache static assets
+            try_files $uri /index.html =404;
 
             # Security headers for HTML pages
             add_header X-Frame-Options "SAMEORIGIN" always;
@@ -60,21 +56,21 @@ http {
         }
 
         # Serve static assets with caching and security headers
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                root /home/deployment/frontend;
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-                add_header X-Frame-Options "SAMEORIGIN" always;
-                add_header X-XSS-Protection "1; mode=block" always;
-                add_header X-Content-Type-Options "nosniff" always;
-                add_header Referrer-Policy "no-referrer-when-downgrade" always;
-            }
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            root /home/deployment/frontend;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        }
     }
 
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name _;
-
         location / {
             return 301 https://$host$request_uri;
         }
