--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -43,9 +43,9 @@ http {
 
         # Serve static frontend files (SPA)
         location / {
-            root /home/deployment/frontend;
+            root /var/www/frontend;
             index index.html;
-            try_files $uri /index.html =404;
+            try_files $uri $uri/ /index.html;
 
             # Security headers for HTML pages
             add_header X-Frame-Options "SAMEORIGIN" always;
@@ -57,7 +57,7 @@ http {
 
         # Serve static assets with caching and security headers
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            root /home/deployment/frontend;
+            root /var/www/frontend;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
