--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt/live/zealtesfaye.me/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
       - /etc/letsencrypt/live/zealtesfaye.me/privkey.pem:/etc/nginx/certs/privkey.pem:ro
+      - ../frontend:/var/www/frontend:ro
       # - /etc/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       process1:
