--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -24,50 +24,42 @@ http {
         listen 443 ssl;
         server_name _;
 
+        # ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+        # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
         ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
-        # Proxy API requests to Node.js backend
         location /api {
             proxy_pass http://nodejs_cluster;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
 
-        # Serve static frontend files (SPA)
         location / {
-            root /var/www/frontend;
+            root /var/www/task-flow;
+            expires 1m;
             index index.html;
             try_files $uri $uri/ /index.html;
 
-            # Security headers for HTML pages
             add_header X-Frame-Options "SAMEORIGIN" always;
-            add_header X-XSS-Protection "1; mode=block" always;
             add_header X-Content-Type-Options "nosniff" always;
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
             add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         }
 
-        # Serve static assets with caching and security headers
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            root /var/www/frontend;
+            root /var/www/task-flow;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
-            add_header X-XSS-Protection "1; mode=block" always;
             add_header X-Content-Type-Options "nosniff" always;
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
         }
     }
 
-    # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name _;
@@ -75,4 +67,3 @@ http {
             return 301 https://$host$request_uri;
         }
     }
-}
