--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -42,7 +42,7 @@ http {
             root /var/www/task-flow;
             expires 1m;
             index index.html;
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /404.html;
 
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-Content-Type-Options "nosniff" always;
