fix: update target directory for build files in deployment workflow

--- a/.github/workflows/client.prod.yml
+++ b/.github/workflows/client.prod.yml
@@ -56,5 +56,5 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "client/out/"
-          target: "~/task-flow/frontend"
+          target: "~/task-flow/client"
           strip_components: 2
