--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -24,22 +24,13 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 RUN addgroup --system app && adduser --system --ingroup app app
 RUN npm install -g pnpm
 
-# --- FIX START: Create logs directory and assign permissions ---
-# We must do this as root before switching to USER app
-RUN mkdir -p /app/logs && chown -R app:app /app/logs
-# --- FIX END ---
-
 USER app
-
 WORKDIR /app
 
 COPY package*.json pnpm-lock.yaml ./
-
 RUN pnpm install --frozen-lockfile --prod --ignore-scripts --shamefully-hoist 
 
 # Copy compiled code & dependencies
-# Note: It is good practice to verify ownership, but since app only reads these, 
-# standard copy is usually fine. If you have issues, add --chown=app:app
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/prisma ./prisma
 COPY --from=build /app/public ./public
@@ -47,6 +38,12 @@ COPY --from=build /app/views ./views
 
 ENV NODE_TLS_REJECT_UNAUTHORIZED=0
 RUN npx prisma generate
+
+# Fix permissions for mounted volumes
+USER root
+RUN chown -R app:app /app/logs
+USER app
+
 EXPOSE 5000
 
 CMD ["npm", "start"]
