--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   process1:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
     env_file:
@@ -7,6 +6,8 @@ services:
     environment:
       CONTAINER_NAME: process1
     restart: on-failure
+    user: root
+    entrypoint: ["sh", "-c", "chown -R app:app /app/logs && exec su-exec app npm start"]
     depends_on:
       db:
         condition: service_healthy
@@ -14,6 +15,7 @@ services:
         condition: service_completed_successfully
       seeder:
         condition: service_completed_successfully
+      
     volumes:
       - logs_data:/app/logs
     healthcheck:
@@ -30,6 +32,8 @@ services:
     environment:
       CONTAINER_NAME: process2
     restart: on-failure
+    user: root
+    entrypoint: ["sh", "-c", "chown -R app:app /app/logs && exec su-exec app npm start"]
     depends_on:
       db:
         condition: service_healthy
@@ -56,6 +60,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt/live/zealtesfaye.me/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
       - /etc/letsencrypt/live/zealtesfaye.me/privkey.pem:/etc/nginx/certs/privkey.pem:ro
+      # - /etc/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       process1:
         condition: service_healthy
@@ -70,6 +75,7 @@ services:
       POSTGRES_DB: tasks
       POSTGRES_USER: task-manager-db
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+      
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -91,7 +97,7 @@ services:
         condition: service_healthy
     volumes:
       - ./prisma:/app/prisma:ro
-
+  
   seeder:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
     env_file:
