--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - "443:443"
     volumes:
       - /home/deployment/task-flow/client:/var/www/task-flow:ro
+      - /home/deployment/task-flow/admin:/var/www/task-flow/admin:ro
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt/live/zealtesfaye.me/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
       - /etc/letsencrypt/live/zealtesfaye.me/privkey.pem:/etc/nginx/certs/privkey.pem:ro
