--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -58,6 +58,27 @@ http {
             add_header X-Content-Type-Options "nosniff" always;
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
         }
+
+        location /admin {
+            root /var/www/task-flow;
+            expires 1m;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header Referrer-Policy "no-referrer-when-downgrade" always;
+            add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        }
+
+        location ~* /admin/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            root /var/www/task-flow;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        }
     }
 
     server {
