--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -39,10 +39,10 @@ http {
         }
 
         location / {
-            root /var/www/task-flow;
+            root /var/www/task-flow-client;
             expires 1m;
             index index.html;
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /404.html;
 
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-Content-Type-Options "nosniff" always;
@@ -51,7 +51,7 @@ http {
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            root /var/www/task-flow;
+            root /var/www/task-flow-client;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
@@ -60,7 +60,7 @@ http {
         }
 
         location /admin {
-            root /var/www/task-flow;
+            root /var/www/task-flow-server;
             expires 1m;
             index index.html;
             try_files $uri $uri/ /index.html;
@@ -72,7 +72,7 @@ http {
         }
 
         location ~* /admin/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            root /var/www/task-flow;
+            root /var/www/task-flow-server;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
