--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -63,7 +63,7 @@ http {
             root /var/www/task-flow-admin;
             expires 1m;
             index index.html;
-            try_files $uri $uri/ /index.html;
+            try_files index.html;
 
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-Content-Type-Options "nosniff" always;
