--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -59,11 +59,11 @@ http {
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
         }
 
-        location /admin {
-            alias /var/www/task-flow-admin;
+        location ^~ /admin/ {
+            alias /var/www/task-flow-admin/;
             expires 1m;
             index index.html;
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /admin/index.html;
 
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-Content-Type-Options "nosniff" always;
@@ -71,8 +71,8 @@ http {
             add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         }
 
-        location ~* /admin/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            alias /var/www/task-flow-admin;
+        location ~* ^/admin/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            alias /var/www/task-flow-admin/;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
