--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -95,14 +95,14 @@ services:
     volumes:
       - ./prisma:/app/prisma:ro
   
-  seeder:
-    image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
-    env_file:
-      - ./.env
-    command: npm run seed
-    depends_on:
-      migrator:
-        condition: service_completed_successfully
+  # seeder:
+  #   image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
+  #   env_file:
+  #     - ./.env
+  #   command: npm run seed
+  #   depends_on:
+  #     migrator:
+  #       condition: service_completed_successfully
         
 volumes:
   postgres_data:
