--- a/.github/workflows/admin.prod.yml
+++ b/.github/workflows/admin.prod.yml
@@ -10,8 +10,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout Repository
@@ -38,6 +40,24 @@ jobs:
         run: pnpm build
         env:
           VITE_API_URL: ${{secrets.VITE_API_URL}}
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: admin-build-files
+          path: admin/dist/
+          retention-days: 1
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: admin-build-files
+          path: admin/dist/
 
       - name: Ensure remote directory exists
         uses: appleboy/ssh-action@v1.0.3
