--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -22,6 +22,27 @@ http {
 
     server {
         listen 443 ssl;
+        server_name name-swap.vercel.app;
+
+        # ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+        # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
+        location / {
+            proxy_pass http://host.docker.internal:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+    }
+
+    server {
+        listen 443 ssl;
         server_name _;
 
         # ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
