--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -32,7 +32,7 @@ RUN pnpm install --frozen-lockfile --prod --ignore-scripts --shamefully-hoist
 # Copy compiled code & dependencies
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/prisma ./prisma
-COPY --from=build /app/prisma.config.ts ./prisma.config.ts
+COPY --from=build /app/prisma.config.js ./prisma.config.js
 COPY --from=build /app/public ./public
 COPY --from=build /app/views ./views
 
