updated nginx config

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -21,8 +21,9 @@ http {
     }
 
     server {
-        listen 443 ssl;
-        server_name name-swap.vercel.app;
+        # Dedicated TLS listener for app-to-app traffic on port 444
+        listen 444 ssl;
+        server_name _;
 
         # ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
