--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -13,8 +13,8 @@ services:
         condition: service_healthy
       migrator:
         condition: service_completed_successfully
-      seeder:
-        condition: service_completed_successfully
+      # seeder:
+      #   condition: service_completed_successfully
       
     volumes:
       - logs_data:/app/logs
@@ -35,8 +35,8 @@ services:
     user: root
     entrypoint: ["sh", "-c", "chown -R app:app /app/logs && exec gosu app npm start"]
     depends_on:
-      seeder:
-        condition: service_completed_successfully
+        # seeder:
+        #   condition: service_completed_successfully
     volumes:
       - logs_data:/app/logs
     healthcheck:
