--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -34,9 +34,9 @@ services:
     restart: on-failure
     user: root
     entrypoint: ["sh", "-c", "chown -R app:app /app/logs && exec gosu app npm start"]
-    depends_on:
-        # seeder:
-        #   condition: service_completed_successfully
+    # depends_on:
+    #     # seeder:
+    #     #   condition: service_completed_successfully
     volumes:
       - logs_data:/app/logs
     healthcheck:
