--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -31,7 +31,7 @@ http {
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
-            proxy_pass http://172.31.46.203:5000;
+            proxy_pass http://host.docker.internal:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
