--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -25,10 +25,10 @@ http {
         listen 3000 ssl;
         server_name _;
 
-        # ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
-        # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        # ssl_certificate /etc/nginx/certs/fullchain.pem;
+        # ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
             proxy_pass http://host.docker.internal:5000;
