--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -21,7 +21,6 @@ http {
     }
 
     server {
-        # Dedicated TLS listener for app-to-app traffic on port 444
         listen 3000 ssl;
         server_name _;
 
@@ -46,10 +45,10 @@ http {
         listen 443 ssl;
         server_name _;
 
-        # ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
-        # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        # ssl_certificate /etc/nginx/certs/fullchain.pem;
+        # ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location /api {
             proxy_pass http://nodejs_cluster;
