updated nginx config

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,5 @@ ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin
 DOCKER_USERNAME=username
 IMAGE_NAME=image
+BETTER_AUTH_SECRET=secret
+BETTER_AUTH_URL=http://localhost:5000 
