--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -21,8 +21,8 @@ http {
     }
 
     server {
-        listen 3000 ssl;
-        server_name _;
+        listen 443 ssl;
+        server_name api.desonames.xyz www.api.desonames.xyz;
 
         # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
@@ -43,7 +43,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name _;
+        server_name task-flows.tech www.task-flows.tech;
 
         # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
@@ -80,7 +80,33 @@ http {
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
         }
 
-        location ^~ /admin/ {
+        # location ^~ /admin/ {
+        #     alias /var/www/task-flow-admin/;
+        #     expires 1m;
+        #     index index.html;
+        #     try_files $uri $uri/ /admin/index.html;
+
+        #     add_header X-Frame-Options "SAMEORIGIN" always;
+        #     add_header X-Content-Type-Options "nosniff" always;
+        #     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        #     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        # }
+
+        # location ~* ^/admin/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        #     alias /var/www/task-flow-admin/;
+        #     expires 1y;
+        #     add_header Cache-Control "public, immutable";
+        #     add_header X-Frame-Options "SAMEORIGIN" always;
+        #     add_header X-Content-Type-Options "nosniff" always;
+        #     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        # }
+    }
+
+      server {
+        listen 443 ssl;
+        server_name admin.task-flows.tech;
+
+        location / {
             alias /var/www/task-flow-admin/;
             expires 1m;
             index index.html;
@@ -92,19 +118,18 @@ http {
             add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         }
 
-        location ~* ^/admin/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             alias /var/www/task-flow-admin/;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-Content-Type-Options "nosniff" always;
             add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        }
-    }
+      }
 
     server {
         listen 80;
-        server_name _;
+        server_name task-flows.tech www.task-flows.tech;
         location / {
             return 301 https://$host$request_uri;
         }
