--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -43,7 +43,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name task-flows.tech www.task-flows.tech;
+        server_name task-flows.tech www.task-flows.tech _;
 
         # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
@@ -107,7 +107,7 @@ http {
         server_name admin.task-flows.tech;
 
         location / {
-            alias /var/www/task-flow-admin/;
+            root /var/www/task-flow-admin/;
             expires 1m;
             index index.html;
             try_files $uri $uri/ /admin/index.html;
@@ -119,7 +119,7 @@ http {
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            alias /var/www/task-flow-admin/;
+            root /var/www/task-flow-admin/;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Frame-Options "SAMEORIGIN" always;
@@ -130,7 +130,7 @@ http {
 
     server {
         listen 80;
-        server_name task-flows.tech www.task-flows.tech;
+        server_name _;
         location / {
             return 301 https://$host$request_uri;
         }
