--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -20,6 +20,7 @@ http {
         server process2:5000;
     }
 
+
     server {
         listen 443 ssl;
         server_name api.desonames.xyz www.api.desonames.xyz;
@@ -43,7 +44,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name task-flows.tech www.task-flows.tech _;
+        server_name task-flows.tech www.task-flows.tech default_server;
 
         # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
