--- a/.github/workflows/client.prod.yml
+++ b/.github/workflows/client.prod.yml
@@ -40,6 +40,7 @@ jobs:
         run: pnpm build
         env:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
