--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -13,8 +13,8 @@ services:
         condition: service_healthy
       migrator:
         condition: service_completed_successfully
-      # seeder:
-      #   condition: service_completed_successfully
+      seeder:
+        condition: service_completed_successfully
       
     volumes:
       - logs_data:/app/logs
@@ -39,8 +39,8 @@ services:
         condition: service_healthy
       migrator:
         condition: service_completed_successfully
-        # seeder:
-        #   condition: service_completed_successfully
+        seeder:
+          condition: service_completed_successfully
     volumes:
       - logs_data:/app/logs
     healthcheck:
@@ -102,14 +102,14 @@ services:
     volumes:
       - ./prisma:/app/prisma:ro
   
-  # seeder:
-  #   image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
-  #   env_file:
-  #     - ./.env
-  #   command: npm run seed
-  #   depends_on:
-  #     migrator:
-  #       condition: service_completed_successfully
+  seeder:
+    image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
+    env_file:
+      - ./.env
+    command: npm run seed
+    depends_on:
+      migrator:
+        condition: service_completed_successfully
         
 volumes:
   postgres_data:
