--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -62,8 +62,7 @@ services:
       - /home/deployment/task-flow/client:/var/www/task-flow-client:ro
       - /home/deployment/task-flow/admin:/var/www/task-flow-admin:ro
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt/live/task-flows.tech/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
-      - /etc/letsencrypt/live/task-flows.tech/privkey.pem:/etc/nginx/certs/privkey.pem:ro
+      - /etc/letsencrypt/live:/etc/nginx/certs:ro
       - /etc/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       process1:
