--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -27,8 +27,8 @@ http {
 
         # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_certificate /etc/nginx/certs/api.desonames.xyz/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/api.desonames.xyz/privkey.pem;
 
         location / {
             proxy_pass http://host.docker.internal:5000;
@@ -48,8 +48,8 @@ http {
 
         # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_certificate /etc/nginx/certs/task-flows.tech/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/task-flows.tech/privkey.pem;
 
         location /api {
             proxy_pass http://nodejs_cluster;
@@ -106,6 +106,11 @@ http {
       server {
         listen 443 ssl;
         server_name admin.task-flows.tech;
+
+        # ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        # ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_certificate /etc/nginx/certs/task-flows.tech/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/task-flows.tech/privkey.pem;
 
         location / {
             root /var/www/task-flow-admin/;
