--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -62,7 +62,10 @@ services:
       - /home/deployment/task-flow/client:/var/www/task-flow-client:ro
       - /home/deployment/task-flow/admin:/var/www/task-flow-admin:ro
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt/archive:/etc/nginx/certs:ro
+      - /etc/letsencrypt/live/api.desonames.xyz/fullchain.pem:/etc/nginx/certs/api.desonames.xyz/fullchain.pem:ro
+      - /etc/letsencrypt/live/api.desonames.xyz/privkey.pem:/etc/nginx/certs/api.desonames.xyz/privkey.pem:ro
+      - /etc/letsencrypt/live/taskflows.tech/fullchain.pem:/etc/nginx/certs/taskflows.tech/fullchain.pem:ro
+      - /etc/letsencrypt/live/taskflows.tech/privkey.pem:/etc/nginx/certs/taskflows.tech/privkey.pem:ro
       - /etc/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       process1:
