fix: nginx release port 3000 and loki set store in memory

--- a/server/infra/loki-config.yaml
+++ b/server/infra/loki-config.yaml
@@ -1,19 +1,26 @@
-auth_enabled: false # No passwords for internal Docker communication
+auth_enabled: false
+
 server:
-  http_listen_port: 3100 # receive logs
+  http_listen_port: 3100
 
 common:
+  instance_addr: 127.0.0.1 # Add this!
   path_prefix: /loki
   storage:
-    filesystem: # Save logs as files on the disk"
+    filesystem:
       chunks_directory: /loki/chunks
       rules_directory: /loki/rules
   replication_factor: 1
+  ring:
+    kvstore:
+      store: inmemory # This tells Loki NOT to look for port 8500
 
 schema_config:
   configs:
     - from: 2020-10-24
-      store: tsdb # A modern, fast storage format
+      store: tsdb
       object_store: filesystem
       schema: v13
-      index: { prefix: index_, period: 24h }
+      index:
+        prefix: index_
+        period: 24h
