--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -55,7 +55,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "3000:3000"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
@@ -121,6 +120,24 @@ services:
     volumes:
       - ./infra/loki-config.yaml:/etc/loki/local-config.yaml
     command: -config.file=/etc/loki/local-config.yaml
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./infra/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    depends_on:
+      - process1
+      - process2
 
   promtail:
     image: grafana/promtail:latest
