--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
