--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -135,6 +135,25 @@ http {
     }
 
     server {
+        listen 443 ssl;
+        server_name monitor.task-flows.tech;
+
+        ssl_certificate /etc/nginx/certs/task-flows.tech/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/task-flows.tech/privkey.pem;
+
+        location / {
+            proxy_pass http://grafana:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+    }
+
+    server {
         listen 80;
         server_name _;
         location / {
