--- a/server/.env.example
+++ b/server/.env.example
@@ -10,4 +10,6 @@ ADMIN_PASSWORD=admin
 DOCKER_USERNAME=username
 IMAGE_NAME=image
 BETTER_AUTH_SECRET=secret
-BETTER_AUTH_URL=http://localhost:5000 
+BETTER_AUTH_URL=http://localhost:5000
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
