--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "prom-client": "^15.1.3",
+    "resend": "^6.6.0",
+    "stripe": "^20.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
