--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.2",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
