--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
+    "ioredis": "^5.8.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
