--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -16,8 +16,8 @@ services:
         condition: service_started
       migrator:
         condition: service_completed_successfully
-      seeder:
-        condition: service_completed_successfully
+      # seeder:
+      #   condition: service_completed_successfully
       
     volumes:
       - logs_data:/app/logs
@@ -45,8 +45,8 @@ services:
         condition: service_started
       migrator:
         condition: service_completed_successfully
-      seeder:
-        condition: service_completed_successfully
+      # seeder:
+      #   condition: service_completed_successfully
     volumes:
       - logs_data:/app/logs
     healthcheck:
@@ -115,6 +115,8 @@ services:
       - ./.env
     command: npm run seed
     depends_on:
+      redis:
+        condition: service_started
       migrator:
         condition: service_completed_successfully
   
