fix: email on invitation and task assignment

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,6 +3,7 @@ DB_PASSWORD=password
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=secret
+REDIS_URL=redis://localhost:6379
 FRONTEND_URL=http://localhost:3000
 ADMIN_NAME=admin
 ADMIN_EMAIL=admin@admin.com
@@ -13,3 +14,14 @@ BETTER_AUTH_SECRET=secret
 BETTER_AUTH_URL=http://localhost:5000
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Resend API for email notifications (Get your API key from https://resend.com)
+RESEND_API_KEY=re_your_resend_api_key_here
+
+# Stripe configuration for subscriptions
+STRIPE_API_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_PRODUCT_STARTER_ID=prod_starter_product_id
+STRIPE_PRICE_STARTER_ID=price_starter_price_id
+STRIPE_PRODUCT_PRO_ID=prod_pro_product_id
+STRIPE_PRICE_PRO_ID=price_pro_price_id
